# Claude

./: .gitignore  CLAUDE.md  settings.json  settings.local.json
.claude/: settings.json  settings.local.json
projects/: 搜推广算法演变小册子.html  搜推广算法演变小册子.md
projects/sci-agent/: README.md  agent.py  pyproject.toml
projects/sci-agent/skills/pubmed_search/: SKILL.md
projects/sci-agent/tools/: __init__.py  pubmed.py
projects/trading agents/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
projects/trading agents/agents/: __init__.py  fundamental.py  industry.py  macro_policy.py  researcher.py  schemas.py  sentiment.py  technical.py
projects/trading agents/harness/: agent.py  llm_router.py  orchestrator.py
projects/trading agents/output/: __init__.py  report.py
projects/trading agents/risk/: __init__.py  portfolio.py  position_sizing.py  signal_tracker.py  stop_loss.py
projects/trading agents/skills/a_share_rules/: SKILL.md
projects/trading agents/skills/fundamental/: SKILL.md
projects/trading agents/skills/industry/: SKILL.md
projects/trading agents/skills/macro_policy/: SKILL.md
projects/trading agents/skills/researcher/: SKILL.md
projects/trading agents/skills/sentiment/: SKILL.md
projects/trading agents/skills/technical/: SKILL.md
projects/trading agents/tools/: __init__.py  financials.py  indicators.py  macro.py  market_data.py  news.py
projects/trading agents/trading_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wbr-category-strategy-v3/: CLAUDE.md  README.md  SKILL.md  _meta.json
(+306 files in other folders)
