[project]
name = "sci-agent"
version = "0.1.0"
description = "科研 AI Agent 骨架 - 基于 Anthropic SDK 原生 tool use"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
science = [
    "biopython>=1.84",
    "scanpy>=1.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
